--- a/templates/cart.html
+++ b/templates/cart.html
@@ -2,28 +2,32 @@
 
 {%block body_block %}
 
-<h5>Cart Items</h5>
+<h5 >Cart Items</h5>
 
 <div class="wcard">
+
+
     
 {% for item in product %}
 
 <div class="card mb-3 " style="max-width: 600px;">
     <div class=" row g-0">
       <div class="col-md-6" >
-        <img src="{{item.image.url}}" class="img-fluid rounded-start" alt="...">
+        <img src="{{item.product.image.url}}" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-6">
         <div class="card-body">
-          <h5 class="card-title">{{item.name}}</h5>
-          <p class="card-text">{{item.description}}</p>
-          <p class="card-text"><small class="text-muted">{{item.price}}</small></p>
-          {% if iscart %}
-          <a href="{% url 'removecart' id=item.id%}" class="btn">Remove</a>
-          {% else %}
-          <a href="{% url 'removewish' id=item.id%}"><i class="fa-solid fa-heart-circle-minus ico-w"></i></a>
-          {% endif %}
-
+          <h5 class="card-title">{{item.product.name}}</h5>
+          <p class="card-text">{{item.product.description}}</p>
+          <p class="card-text"><small class="text-muted">{{item.product.price}}</small></p>
+          <div class="p2uyH2">
+            <button class="LcLcvv decrement" > – </button>
+              <div class="atHedL OWA00X">
+                <input type="text" class="p6sArZ inputbtn" value="{{item.cart_count}}" >
+              </div>
+            <button class="LcLcvv increment" > + </button>
+            <a href="{% url 'removecart' id=item.id%}" class="btn cartr">Remove</a>
+          </div> 
         </div>
       </div>
     </div>
@@ -32,4 +36,43 @@
   {% endfor %}
 </div>
 
+
+
+
+
+<script>
+ document.addEventListener("DOMContentLoaded", function () {
+  // Select all the elements for increment, decrement, and input fields
+  const incrementButtons = document.querySelectorAll(".increment");
+  const decrementButtons = document.querySelectorAll(".decrement");
+  const inputFields = document.querySelectorAll(".inputbtn");
+
+  // Loop through each set of buttons and input fields
+  incrementButtons.forEach((plusButton, index) => {
+    const inputField = inputFields[index];
+    const minusButton = decrementButtons[index];
+
+    plusButton.addEventListener("click", function () {
+      updateQuantity(inputField, 1);
+      console.log("Plus clicked");
+    });
+
+    minusButton.addEventListener("click", function () {
+      updateQuantity(inputField, -1);
+      console.log("Minus clicked");
+    });
+  });
+
+  function updateQuantity(inputField, count) {
+    let currentValue = inputField.value;
+    let newValue = parseInt(currentValue) + count;
+    if (newValue < 1) {
+      newValue = 1;
+      alert("Minimum Quantity Should Be 1 !!!");
+    }
+    inputField.value = newValue;
+  }
+});
+
+</script> 
 {%endblock %}
