--- a/templates/main.html
+++ b/templates/main.html
@@ -134,6 +134,65 @@
       transform: scale(1.2);
     }
 
+    .p2uyH2 {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    color: #212121;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+.p2uyH2 .atHedL .p6sArZ:disabled {
+    background: #fff;
+}
+.p2uyH2 .atHedL .p6sArZ {
+    border: none;
+    width: 100%;
+    font-size: 14px;
+    font-weight: 500;
+    vertical-align: top;
+    text-align: center;
+}
+.p2uyH2 .LcLcvv {
+    width: 28px;
+    height: 28px;
+    background: linear-gradient(#fff,#f9f9f9);
+    display: inline-block;
+    border: 1px solid #c2c2c2;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 50%;
+    padding-top: 0.8px;
+    line-height: 1;
+}
+
+.p2uyH2 .atHedL {
+    display: inline-block;
+    padding: 3px 6px;
+    width: calc(100% - 60px);
+    height: 100%;
+    width: 46px;
+    height: 28px;
+    border-radius: 2px;
+    background-color: #fff;
+    border: 1px solid #c2c2c2;
+    margin: 0 5px;
+}
+.p2uyH2 {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    color: #212121;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.cartr{
+  margin-left: 20px;
+}
+
 
   </style>
 </head>
