--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home PAge</title>
+  <title>WatchWorx</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -317,26 +317,26 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+            <a class="nav-link {%block statush %}{%endblock%}" aria-current="page" href="{% url 'home' %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'upload' %}">Upload</a>
+            <a class="nav-link {%block statusu %}{%endblock%}" aria-current="page" href="{% url 'upload' %}">Upload</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'show_wishlist' %}">WishList</a>
+            <a class="nav-link {%block statusw %}{%endblock%}" aria-current="page" href="{% url 'show_wishlist' %}">WishList</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'show_cart' %}">Cart</a>
+            <a class="nav-link {%block statusc %}{%endblock%}"aria-current="page"  href="{% url 'show_cart' %}">Cart</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
+          </li> -->
         </ul>
-        <form class="d-flex">
+        <form class="d-flex" style="margin-right: 15px;">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
-        <div class="dropdown" style="margin-left: 5px;">
+        <div class="btn-group dropstart" >
           <button class="btn dropdown-toggle homebtn bg-dark" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-person-circle"></i>
           </button>
@@ -348,6 +348,7 @@
             {% endif %}
             
             <li><a class="dropdown-item" href="{% url 'about' %}">About Us</a></li>
+            <li><a class="dropdown-item" href="{% url 'contact' %}">Contact Us</a></li>
 
             {% if user.is_authenticated %}
             <li><li><a class="dropdown-item" href="{% url 'logout' %}">LogOut</a></li></li>
@@ -388,19 +389,19 @@
               Contact Us
             </h4>
             <div class="contact_link_box">
-              <a href="">
+              <a href="" style="text-decoration: none;">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
                   Bangalore
                 </span>
               </a>
-              <a href="">
+              <a href="" style="text-decoration: none;">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
                   Call +91 1234567890
                 </span>
               </a>
-              <a href="">
+              <a href="" style="text-decoration: none;">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
                   watchworx@gmail.com
