search bar modification

--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,7 @@
 <h1 style="font-family: sans-serif; background-color: rgb(127, 195, 255); text-align: center; margin: 10px;">New
     Arrivales</h1>
 <div class="cards-container"
-    style="display: grid; grid-template-columns: 350px 350px 350px 350px; padding: 20px; margin: 10px;">
+    style="display: grid; grid-template-columns: 350px 350px 350px 350px; padding: 20px; margin: 10px; margin-left: 50px;">
 
     {% for item in watches_t %}
         <div class="card" style="width: 18rem;">
