--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
 
 {%block card_block %}
 {% load static %}
-<h1 style="font-family: sans-serif; background-color: rgb(127, 195, 255); text-align: center; margin: 10px;">New
+<h1 style="font-family: sans-serif; background-color: #222831; color: #e1e1e1; text-align: center; margin: 0px; margin-top: 3px;">New
     Arrivales</h1>
 <div class="cards-container"
     style="display: grid; grid-template-columns: 350px 350px 350px 350px; padding: 20px; margin: 10px; margin-left: 50px;">
