--- a/templates/cart.html
+++ b/templates/cart.html
@@ -2,7 +2,7 @@
 {%block statusc %}active{%endblock%}
 {%block body_block %}
 
-<h5 >Cart Items</h5>
+<h5 class="wheading">Cart Items</h5>
 
 <div class="wcard">
 
