--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -2,7 +2,7 @@
 {%block statusw %}active{%endblock%}
 {%block body_block %}
 
-<h5>WishList Items</h5>
+<h5 class="wheading">WishList Items</h5>
 
 <div class="wcard">
     
