--- a/templates/home.html
+++ b/templates/home.html
@@ -41,8 +41,7 @@
 {% load static %}
 <h1 style="font-family: sans-serif; background-color: #222831; color: #e1e1e1; text-align: center; margin: 0px; margin-top: 3px;">New
     Arrivales</h1>
-<div class="cards-container"
-    style="display: grid; grid-template-columns: 350px 350px 350px 350px; padding: 20px; margin: 10px; margin-left: 50px;">
+<div class="cards-container">
 
     {% for item in watches_t %}
         <div class="card" style="width: 18rem;">
