--- a/templates/main.html
+++ b/templates/main.html
@@ -16,6 +16,169 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <style>
 
+
+@media (min-width: 320px) and (max-width: 345px) {
+  .navbar{
+    width: device-width;
+  }
+  
+  .cards-container{
+      display: grid; 
+      grid-template-columns: 100%;
+      padding: 1%; 
+      margin: 1%; 
+      margin-left: 1%;
+      /* align-items: center; */
+    }
+
+    .wcard{
+      display: grid;
+      grid-template-columns: 100%;
+    }
+
+    .scard{
+      display: grid;
+      grid-template-columns: 100%;
+    }
+}
+@media (min-width: 345px) and (max-width: 425px) {
+  .navbar{
+    width: device-width;
+  }
+  
+  .cards-container{
+      display: grid; 
+      grid-template-columns: 100%;
+      padding: 1%; 
+      margin: 1%; 
+      margin-left: 7%;
+      /* align-items: center; */
+    }
+
+    .wcard{
+      display: grid;
+      grid-template-columns: 100%;
+    }
+}
+
+@media (min-width: 425px) and (max-width: 650px) {
+  .navbar{
+    width: device-width;
+  }
+  
+  .cards-container{
+      display: grid; 
+      grid-template-columns: 100%;
+      padding: 1%; 
+      margin: 1%; 
+      margin-left: 15%;
+      /* align-items: center; */
+    }
+
+    .wcard{
+      display: grid;
+      grid-template-columns: 100%;
+    }
+
+}
+
+@media (min-width: 650px) and (max-width: 850px) {
+  .navbar{
+    width: device-width;
+  }
+  
+  .cards-container{
+      display: grid;
+      grid-template-columns:50% 50%; 
+      padding: 1%; 
+      margin: 1%; 
+      margin-left: 4.5%;
+    }
+
+    .wcard{
+      display: grid;
+      grid-template-columns: 100%;
+      margin-left: 9%;
+    }
+
+
+}
+
+
+@media (min-width: 850px) and (max-width: 1023px) {
+  .navbar{
+    width: device-width;
+  }
+  
+  .cards-container{
+      display: grid;
+      grid-template-columns:50% 50%; 
+      padding: 1%; 
+      margin: 1%; 
+      margin-left: 8%;
+    }
+
+    .wcard{
+      display: grid;
+      grid-template-columns: 100%;
+      margin-left: 15%;
+    }
+
+}
+
+
+@media (min-width: 1024px) and (max-width: 1439px) {
+  .navbar{
+    width: device-width;
+  }
+  
+  .cards-container{
+      display: grid;
+      grid-template-columns:33% 33% 33% ; 
+      padding: 1%; 
+      margin: 1%; 
+      margin-left: 2%;
+    }
+    .wcard{
+      display: grid;
+      grid-template-columns: 100%;
+      margin-left: 19%;
+    }
+
+    .scard{
+      display: grid;
+      grid-template-columns: 50% 50%;
+      margin-left: 1px;
+    }
+
+}
+
+@media (min-width: 1440px) and (max-width: 2560px) {
+  .navbar{
+    width: device-width;
+  }
+
+  .cards-container{
+      display: grid;
+      grid-template-columns: 25% 25% 25% 25%; 
+      padding: 1%; 
+      margin: 1%; 
+      margin-left: 4.5%;
+    }
+    .wcard{
+      display: grid;
+      grid-template-columns: 50% 50%;
+      margin-left: 7%;
+    }
+
+    .scard{
+      display: grid;
+      grid-template-columns: 50% 50%;
+      margin-left: 1px;
+    }
+
+}
+
 .carousel-item img {
     width: 100%;
     height: 600px; /* Maintain aspect ratio */
@@ -24,6 +187,8 @@
    body{
       scroll-behavior: smooth;
     } 
+
+   
     .card {
       padding: 10px;
       margin: 10px;
@@ -33,11 +198,7 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
 
-    .wcard{
-      display: grid;
-      grid-template-columns: 50% 50%;
-      margin-left: 70px;
-    }
+    
 
     .c-button {
       padding: 5px;
@@ -343,12 +504,8 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li> -->
         </ul>
-        <form class="d-flex" style="margin-right: 15px;"  method="get" action="{% url 'search' %}">
-          {% csrf_token %}
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-        <div class="btn-group dropstart" >
+
+                <div class="btn-group dropdown" style="margin-right: 2%;">
           <button class="btn dropdown-toggle homebtn bg-dark" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-person-circle"></i>
           </button>
@@ -370,6 +527,12 @@
 
           </ul>
         </div>
+        <form class="d-flex" style="margin-right: 15px;"  method="get" action="{% url 'search' %}">
+          {% csrf_token %}
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+
 
 <!-- 
         {% if user.is_authenticated %}
