User SignUp module Upgraded

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,7 +8,7 @@
         <div class="form-grp">{{form.username.label_tag}}{{form.username}}</div>
         <div class="form-grp">{{form.password1.label_tag}}{{form.password1}}</div>
         <div class="form-grp">{{form.password2.label_tag}}{{form.password2}}</div>
-        <a type="submit" class="btn btn-forms btn-info" >SignUp</a>
+        <button type="submit" class="btn btn-forms btn-info" >SignUp</button>
     </form>
 </div>
 
