--- a/templates/main.html
+++ b/templates/main.html
@@ -255,7 +255,8 @@
       padding: 10px;
       position: relative;
       align-items: center;
-      margin-left: 3px;
+      margin-left: 15%;
+
     }
 
     .btn-forms {
