--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,7 +3,7 @@
 
 {%block body_block %}
  
-
+<h5 class="wheading">Upload Form</h5>
 <div class="form-box">
   <form method="post" enctype="multipart/form-data" class="form-upload">
     {% csrf_token %}
